# SleepyShell

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: builtins.c  builtins.h  main.c  path_utils.c  path_utils.h
src/: builtins.c  builtins.h  main.c  path_utils.c  path_utils.h  tokenizer.c  tokenizer.h
src/term/: term.c  term.h
test/: tokenizer_test.c
